Add category basic styles

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,8 @@
 @import "scaffolding";
 @import "blocks/main-header";
 @import "blocks/main-nav";
+@import "blocks/category";
+
 
 // html {
 //   background-color: blue;
