--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,6 +7,10 @@ $contrast-color: $white;
 
 $primary-bg: $white;
 $secondary-bg: #f1f1f1;
+$colorful-bg-primary: #63d1bb;
+$colorful-bg-primary-hover: #59d5bc;
+$colorful-bg-secondary: #56c3b2;
+$colorful-bg-secondary-hover: #46c1ae;
 
 $primary-border: #ececec;
 
