Add featured product and btn styles

--- a/source/sass/blocks/category.scss
+++ b/source/sass/blocks/category.scss
@@ -21,8 +21,8 @@
     background-color: $colorful-bg-primary;
 
     &:hover,
-    &:active,
-    &:focus {
+    &:focus,
+    &:active {
       background-color: $colorful-bg-primary-hover;
     }
   }
