--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,9 @@
 @import "scaffolding";
 @import "blocks/main-header";
 @import "blocks/main-nav";
+@import "blocks/btn";
 @import "blocks/category";
+@import "blocks/featured-product";
 
 
 // html {
