Add contacts and footer styles

--- a/source/sass/blocks/featured-product.scss
+++ b/source/sass/blocks/featured-product.scss
@@ -1,6 +1,6 @@
-.featured-product {
-  width: 320px;
-}
+// .featured-product {
+//   width: 320px;
+// }
 
 .featured-product__wrapper {
   padding-top: 27px;
