--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -16,7 +16,7 @@ body {
   word-wrap: break-word;
   color: $color-paragraph;
 
-  // background-color: ;
+  background-color: $color-bg-primary;
 }
 
 img {
