--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,9 @@
 @import "scaffolding";
 @import "blocks/main-header";
 @import "blocks/main-nav";
+@import "blocks/main-footer";
+@import "blocks/social";
+@import "blocks/copyright";
 @import "blocks/btn";
 @import "blocks/slider";
 @import "blocks/category";
@@ -12,6 +15,7 @@
 @import "blocks/advantages";
 @import "blocks/reviews";
 @import "blocks/review";
+@import "blocks/contacts";
 
 // html {
 //   background-color: blue;
