--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,9 +3,10 @@
 
   box-sizing: border-box;
   min-height: 52px;
-  padding-top: 15px;
+  padding: 15px 0 0;
 
   @include font-set($text-important, $lh-dense, $weight-bold);
+  font-family: inherit;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
