Add catalog list styles

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -32,12 +32,12 @@
   text-decoration: none;
   color: $color-important;
 
-  &:hover {
+  &:hover[href] {
     opacity: 0.6;
   }
 
-  &:focus,
-  &:active {
+  &:focus[href],
+  &:active[href] {
     opacity: 0.3;
     outline: none;
   }
