--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "scaffolding";
 @import "blocks/main-header";
 @import "blocks/main-nav";
+@import "blocks/main-content";
 @import "blocks/main-footer";
 @import "blocks/social";
 @import "blocks/copyright";
@@ -21,6 +22,7 @@
 @import "blocks/contacts";
 @import "blocks/catalog";
 @import "blocks/product";
+@import "blocks/video";
 
 html {
   // width: 320px;
