--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/main-nav";
 @import "blocks/main-content";
 @import "blocks/main-footer";
+@import "blocks/page-text";
 @import "blocks/social";
 @import "blocks/copyright";
 @import "blocks/btn";
@@ -23,10 +24,11 @@
 @import "blocks/catalog";
 @import "blocks/product";
 @import "blocks/video";
+@import "blocks/order-form";
 
 html {
   // width: 320px;
 
-  // @include background-image(null, "../img/prev-catalog.jpg", left);
+  // @include background-image(null, "../img/prev-form.jpg", left);
   // opacity: 0.5;
 }
