Refactor mixins. Try html and body 100% height.

--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -130,7 +130,7 @@
   display: block;
   margin-bottom: 31px;
 
-  @include font(14px, 16px);
+  @include font-set(14px, 16px);
 }
 
 .order-form__btn {
