--- a/source/sass/blocks/page-text.scss
+++ b/source/sass/blocks/page-text.scss
@@ -5,5 +5,5 @@
   padding-bottom: 24px;
   padding-left: $padding-content;
 
-  @include font($text-small, $lh-normal);
+  @include font-set($text-small, $lh-normal);
 }
