--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,9 +1,4 @@
-@mixin font($size, $line-height) {
-  font-size: $size;
-  line-height: $line-height;
-}
-
-@mixin font-set($size, $line-height, $weight) {
+@mixin font-set($size, $line-height, $weight: null) {
   font-size: $size;
   line-height: $line-height;
   font-weight: $weight;
