--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -26,3 +26,9 @@ img {
 .visually-hidden {
   @include visually-hidden;
 }
+
+@media (min-width: $width-tablet) {
+  body {
+    margin: 0 auto;
+  }
+}
