--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,11 @@
+$width-mobile: 320px;
+$width-tablet: 768px;
+$width-desktop: 1250px;
+
+
 $padding-content: 30px;
+$padding-content-tablet: 50px;
+$padding-content-desktop: 100px;
 
 
 $font-primary: "Open Sans", "Arial", serif;
