--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,20 +1,25 @@
 .main-header__top {
+  box-sizing: border-box;
+
   background-color: $color-bg-primary;
 }
 
 .main-header__logo {
-  display: block;
+  display: flex;
+  justify-content: center;
 
   min-height: 79px;
-
-  text-align: center;
 }
 
 .main-header__logo-image {
   width: 86px;
   height: 35px;
   margin-top: 22px;
-  margin-right: 2px;
+  margin-left: -2px;
+}
+
+.main-header__delivery {
+  display: none;
 }
 
 .main-header__bottom {
@@ -39,4 +44,52 @@
   @include font-set($text-header, $lh-loose, $weight-bold);
   text-align: center;
   color: $color-header;
+}
+
+@media (min-width: $width-tablet) and (max-width: $width-desktop - 1px) {
+  .main-header__top {
+    height: 88px;
+    padding: 0 $padding-content-tablet;
+
+    // box-shadow: inset 0 -1px 0 0 #e7e7e7;
+  }
+
+  .main-header__logo {
+    justify-content: flex-start;
+
+    height: 88px;
+  }
+
+  .main-header__logo-image {
+    width: 113px;
+    height: 46px;
+  }
+}
+
+@media (min-width: $width-tablet) {
+  .main-header__delivery {
+    display: block;
+
+    margin: -42px 0 0;
+
+    text-align: right;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .main-header__top {
+    height: 88px;
+    padding: 0 $padding-content-desktop;
+  }
+
+  .main-header__logo {
+    height: 88px;
+  }
+
+  .main-header__logo-image {
+    width: 149px;
+    height: 72px;
+    margin-top: 9px;
+    margin-left: -1px;
+  }
 }
