--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,9 +26,21 @@
 @import "blocks/video";
 @import "blocks/order-form";
 
-html {
-  width: 320px;
+// body {
+//   @include background-image(null, "../img/prev-index.jpg", left);
+//   opacity: 0.5;
+// }
 
-  @include background-image(null, "../img/prev-form.jpg", left);
-  opacity: 0.5;
-}
+// @media (min-width: $width-tablet) {
+//   body {
+//     width: $width-tablet;
+//     @include background-image(null, "../img/prev-index-tablet.jpg", center, top);
+//   }
+// }
+
+// @media (min-width: $width-desktop) {
+//   body {
+//     width: $width-desktop;
+//     @include background-image(null, "../img/prev-index-desktop.jpg", center, top);
+//   }
+// }
