--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -50,8 +50,6 @@
   .main-header__top {
     height: 88px;
     padding: 0 $padding-content-tablet;
-
-    // box-shadow: inset 0 -1px 0 0 #e7e7e7;
   }
 
   .main-header__logo {
@@ -64,6 +62,14 @@
     width: 113px;
     height: 46px;
   }
+
+  .main-header__bottom {
+    min-height: 226px;
+  }
+
+  .main-header__title {
+    @include font-set($text-header-tablet, $lh-header-tablet);
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -74,12 +80,24 @@
 
     text-align: right;
   }
+
+  .main-header__bottom {
+    padding-top: 95px;
+
+    box-shadow: inset 0 1px 0 0 #e7e7e7;
+
+    &--image {
+      min-height: 746px;
+      padding-top: 154px;
+    }
+  }
 }
 
 @media (min-width: $width-desktop) {
   .main-header__top {
+    width: $width-desktop-content;
     height: 88px;
-    padding: 0 $padding-content-desktop;
+    margin: 0 auto;
   }
 
   .main-header__logo {
@@ -91,5 +109,13 @@
     height: 72px;
     margin-top: 9px;
     margin-left: -1px;
+  }
+
+  .main-header__bottom {
+    min-height: 255px;
+  }
+
+  .main-header__title {
+    @include font-set($text-header-desktop, $lh-header-desktop);
   }
 }
