--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,20 +27,22 @@
 @import "blocks/order-form";
 
 // body {
-//   @include background-image(null, "../img/prev-index.jpg", left);
+//   @include background-image(null, "../img/prev-catalog.jpg", left);
 //   opacity: 0.5;
 // }
 
 // @media (min-width: $width-tablet) {
 //   body {
 //     width: $width-tablet;
-//     @include background-image(null, "../img/prev-index-tablet.jpg", center, top);
+
+//     @include background-image(null, "../img/prev-catalog-tablet.jpg", center, top);
 //   }
 // }
 
 // @media (min-width: $width-desktop) {
 //   body {
-//     width: $width-desktop;
-//     @include background-image(null, "../img/prev-index-desktop.jpg", center, top);
+//     width: 100%;
+
+//     @include background-image(null, "../img/prev-catalog-desktop.jpg", center, top);
 //   }
 // }
