--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,7 @@ $font-primary: "Open Sans", "Arial", serif;
 $text-small: 13px;
 $text-primary: 15px;
 $text-important: 17px;
+$text-important-tablet: 20px;
 $text-section: 25px;
 $text-header: 27px;
 $text-header-tablet: 43px;
