--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -6,7 +6,6 @@
 
 .main-header__logo {
   display: flex;
-  justify-content: center;
 
   min-height: 79px;
 }
@@ -14,18 +13,12 @@
 .main-header__logo-image {
   width: 86px;
   height: 35px;
-  margin-top: 22px;
-  margin-left: -2px;
-}
-
-.main-header__delivery {
-  display: none;
+  margin: auto;
 }
 
 .main-header__bottom {
   box-sizing: border-box;
   min-height: 177px;
-  padding-top: 70px;
   padding-right: $padding-content;
   padding-left: $padding-content;
 
@@ -34,28 +27,63 @@
   &--image {
     min-height: 283px;
 
-    @include background-image(#f9f9f9, "../img/hero-mobile@1x.jpg", 50%, -17px);
+    @include background-image("../img/hero-mobile@1x.jpg", 50%, -17px, #f9f9f9);
   }
+}
+
+.main-header__delivery {
+  display: none;
+
+  padding: 18px 0 0;
+  margin: 0 0 -42px;
+
+  text-align: right;
 }
 
 .main-header__title {
   margin: 0;
+  padding-top: 70px;
 
   @include font-set($text-header, $lh-loose, $weight-bold);
   text-align: center;
   color: $color-header;
 }
 
+@media (min-width: $width-tablet) {
+  .main-header__logo {
+    height: 88px;
+  }
+
+  .main-header__bottom {
+    min-height: 226px;
+    padding-right: $padding-content-tablet;
+    padding-left: $padding-content-tablet;
+
+    box-shadow: inset 0 1px 0 0 #e7e7e7;
+  }
+
+  .main-header__bottom--image {
+    min-height: 746px;
+  }
+
+  .main-header__delivery {
+    display: block;
+  }
+
+  .main-header__title {
+    padding-top: 95px;
+  }
+
+  .main-header__bottom--image .main-header__title {
+    padding-top: 154px;
+  }
+}
+
 @media (min-width: $width-tablet) and (max-width: $width-desktop - 1px) {
   .main-header__top {
     height: 88px;
-    padding: 0 $padding-content-tablet;
-  }
-
-  .main-header__logo {
-    justify-content: flex-start;
-
-    height: 88px;
+    padding-right: $padding-content-tablet;
+    padding-left: $padding-content-tablet;
   }
 
   .main-header__logo-image {
@@ -63,60 +91,30 @@
     height: 46px;
   }
 
-  .main-header__bottom {
-    min-height: 226px;
-    padding-top: 95px;
-
-    box-shadow: inset 0 1px 0 0 #e7e7e7;
-
-    &--image {
-      min-height: 746px;
-      padding-top: 154px;
-    }
-  }
-
   .main-header__title {
     @include font-set($text-header-tablet, $lh-header-tablet);
   }
 }
 
-@media (min-width: $width-tablet) {
-  .main-header__delivery {
-    display: block;
-
-    margin: -42px 0 0;
-
-    text-align: right;
-  }
-}
-
 @media (min-width: $width-desktop) {
   .main-header__top {
-    @include desktop-content-box;
     height: 88px;
-  }
 
-  .main-header__logo {
-    height: 88px;
+    @include desktop-content-box;
   }
 
   .main-header__logo-image {
     width: 149px;
     height: 72px;
-    margin-top: 9px;
-    margin-left: -1px;
   }
 
-  .main-header__bottom {
+  .main-header__bottom:not(.main-header__bottom--image) {
     min-height: 255px;
-    padding-top: 95px;
+    padding: 0;
+  }
 
-    box-shadow: inset 0 1px 0 0 #e7e7e7;
-
-    &--image {
-      min-height: 746px;
-      padding-top: 154px;
-    }
+  .main-header__delivery {
+    @include desktop-content-box;
   }
 
   .main-header__title {
