--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,3 @@
-// .advantages {
-//   width: 320px;
-// }
-
 .advantages__wrapper {
   padding-top: 27px;
   padding-right: $padding-content;
@@ -26,4 +22,49 @@
 
   @include font-set($text-important, $lh-dense, $weight-bold);
   color: $color-important;
+}
+
+@media (min-width: $width-tablet) {
+  .advantages__wrapper {
+    padding-top: 48px;
+    padding-right: $padding-content-tablet;
+    padding-bottom: 26px;
+    padding-left: $padding-content-tablet;
+  }
+
+  .advantages__title {
+    margin-bottom: 49px;
+
+    @include font-set($text-header-tablet, $lh-header-tablet);
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    height: 465px;
+  }
+
+  .advantages__item {
+    min-height: 155px;
+    width: 50%;
+
+    @include font-set($text-important-tablet, 22px);
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .advantages__wrapper {
+    @include desktop-content-box;
+    box-sizing: border-box;
+    padding-top: 60px;
+    padding-right: 175px;
+    padding-bottom: 32px;
+    padding-left: 175px;
+  }
+
+  .advantages__title {
+    @include font-set($text-header-desktop, $lh-header-desktop);
+  }
 }
