--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -6,7 +6,7 @@
 }
 
 .review__text {
-  margin-bottom: 25px;
+  margin: 0 0 25px;
 }
 
 .review__author {
@@ -20,4 +20,33 @@
 
 .review__author-nick {
   @include font-set($text-important, $lh-loose, $weight-normal);
+}
+
+@media (min-width: $width-tablet) {
+  .review {
+    margin-bottom: 0;
+  }
+
+  .review__text {
+    margin-bottom: 57px;
+
+    @include font-set($text-important, $lh-loose);
+  }
+
+  .review__author {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .review__author-name {
+    margin-bottom: 4px;
+
+    font-size: 18px;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .review__text {
+    margin-bottom: 40px;
+  }
 }
