--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,23 +26,23 @@
 @import "blocks/video";
 @import "blocks/order-form";
 
-// body {
-//   @include background-image("../img/prev-index.jpg", left);
-//   opacity: 0.5;
-// }
+body {
+  @include background-image("../img/prev-index.jpg", left);
+  opacity: 0.5;
+}
 
-// @media (min-width: $width-tablet) {
-//   body {
-//     width: $width-tablet;
+@media (min-width: $width-tablet) {
+  body {
+    width: $width-tablet;
 
-//     @include background-image("../img/prev-index-tablet.jpg", center, top);
-//   }
-// }
+    @include background-image("../img/prev-index-tablet.jpg", center, top);
+  }
+}
 
-// @media (min-width: $width-desktop) {
-//   body {
-//     width: 100%;
+@media (min-width: $width-desktop) {
+  body {
+    width: 100%;
 
-//     @include background-image("../img/prev-index-desktop.jpg", center, top);
-//   }
-// }
+    @include background-image("../img/prev-index-desktop.jpg", center, top);
+  }
+}
