--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,6 @@
-// .contacts {
-//   width: 320px;
-// }
+.contacts {
+  padding-bottom: 39px;
+}
 
 .contacts__wrapper {
   padding-top: 35px;
@@ -75,4 +75,83 @@
   padding-top: 14px;
 
   font-size: 18px;
+}
+
+@media (min-width: $width-tablet) {
+  .contacts {
+    padding-bottom: 57px;
+  }
+
+  .contacts__wrapper {
+    padding-top: 62px;
+    padding-right: $padding-content-tablet;
+    padding-bottom: 27px;
+    padding-left: $padding-content-tablet;
+  }
+
+  .contacts__title {
+    margin-bottom: 49px;
+
+    @include font-set($text-header-tablet, $lh-header-tablet);
+  }
+
+  .contacts__info {
+    display: flex;
+
+    font-size: $text-important;
+  }
+
+  .contacts__item {
+    width: 50%;
+  }
+
+  .contacts__map {
+    margin-bottom: 55px;
+  }
+
+  .contacts__btn {
+    width: 230px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .contacts {
+    display: flex;
+    flex-wrap: wrap;
+
+    @include desktop-content-box;
+    padding-top: 71px;
+    padding-bottom: 105px;
+  }
+
+  .contacts__wrapper {
+    box-sizing: border-box;
+    width: 50%;
+    padding: 0;
+    padding-top: 71px;
+    padding-left: 175px;
+  }
+
+  .contacts__title {
+    @include font-set($text-header-desktop, $lh-header-desktop);
+  }
+
+  .contacts__info {
+    flex-direction: column;
+  }
+
+  .contacts__item {
+    width: 100%;
+  }
+
+  .contacts__map {
+    width: 50%;
+    margin-bottom: 0;
+  }
+
+  .contacts__btn {
+    margin-top: -51px;
+    margin-left: 175px;
+  }
 }
