--- a/source/sass/blocks/page-text.scss
+++ b/source/sass/blocks/page-text.scss
@@ -7,3 +7,24 @@
 
   @include font-set($text-small, $lh-normal);
 }
+
+@media (min-width: $width-tablet) {
+  .page-text {
+    padding-top: 70px;
+    padding-right: $padding-content-tablet;
+    padding-bottom: 8px;
+    padding-left: $padding-content-tablet;
+
+    @include font-set($text-important, $lh-loose);
+  }
+}
+
+@media (min-width: $width-desktop) {
+  .page-text {
+    @include desktop-content-box;
+    box-sizing: border-box;
+    padding-top: 120px;
+    padding-right: 175px;
+    padding-left: 175px;
+  }
+}
