--- a/source/sass/blocks/to-cart-form.scss
+++ b/source/sass/blocks/to-cart-form.scss
@@ -11,7 +11,7 @@
 
 .to-cart-form__label-radio {
   box-sizing: border-box;
-  width: 82px;
+  width: 82 / 260 * 100%;
   height: 52px;
   padding-top: 16px;
 
