--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -22,6 +22,30 @@
 
   @include font-set($text-important, $lh-dense, $weight-bold);
   color: $color-important;
+
+  &--eco {
+    @include background-image("../img/icon-feature-flower.svg", 9px, 0);
+  }
+
+  &--price {
+    @include background-image("../img/icon-feature-money.svg", 0, 0);
+  }
+
+  &--likes {
+    @include background-image("../img/icon-feature-heart.svg", 8px, 6px);
+  }
+
+  &--handmade {
+    @include background-image("../img/icon-feature-ball.svg", 3px, 3px);
+  }
+
+  &--domestic {
+    @include background-image("../img/icon-feature-rocket.svg", -5px, 3px);
+  }
+
+  &--gift {
+    @include background-image("../img/icon-feature-gift.svg", 3px, 2px);
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -34,6 +58,7 @@
 
   .advantages__title {
     margin-bottom: 49px;
+    margin-left: -3px;
 
     @include font-set($text-header-tablet, $lh-header-tablet);
   }
@@ -49,6 +74,7 @@
   .advantages__item {
     min-height: 155px;
     width: 50%;
+    padding-right: 6%;
 
     @include font-set($text-important-tablet, 22px);
   }
