--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -12,7 +12,7 @@
 .main-nav__toggle {
   position: absolute;
   top: 29px;
-  right: 30px;
+  right: $padding-content;
 
   display: none;
 
@@ -41,10 +41,12 @@
 .main-nav__link {
   display: block;
 
+  position: relative;
+
   box-sizing: border-box;
   min-height: 79px;
   padding-top: 26.5px;
-  padding-left: 76px;
+  padding-left: calc(30 / 320 * 100% + 46px);
 
   text-decoration: none;
   color: $color-important;
@@ -57,6 +59,37 @@
   &:active[href] {
     color: rgba($color-important, 0.3);
     outline: none;
+  }
+}
+
+.main-nav__icon {
+  position: absolute;
+  top: 31px;
+  left: $padding-content;
+
+  background-color: #cccccc; //TMP
+
+  &--search {
+    top: 32px;
+
+    margin-left: 2px;
+  }
+
+  path {
+    fill: rgba(#231f20, 0.2);
+  }
+}
+
+.main-nav__link[href]:hover {
+  path {
+    fill: $color-primary;
+  }
+}
+
+.main-nav__link[href]:focus,
+.main-nav__link[href]:active {
+  path {
+    fill: rgba($color-primary, 0.3);
   }
 }
 
@@ -149,6 +182,17 @@
 
     &--cart {
       min-width: 264px;
+    }
+  }
+
+  .main-nav__icon {
+    top: 35px;
+    left: 32px;
+
+    &--search {
+      top: 37px;
+
+      margin-left: 0;
     }
   }
 }
