--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,20 +1,31 @@
 .modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: fixed;
+  top: 50%;
+  z-index: 25;
+
+  display: none;
 
   box-sizing: border-box;
-  width: 322px;
+  width: 100%;
+  min-width: 320px;
   padding-top: 30px;
   padding-right: $padding-content;
+  padding-bottom: 46px;
   padding-left: $padding-content;
 
+  background-color: $color-bg-primary;
   border: 1px solid #c6c6c6;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
 }
 
+.modal--show {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .modal__title {
-  width: 160px;
+  width: 160 / 260 * 100%;
   margin-bottom: 12px;
 
   @include font-set($text-section, $lh-loose, $weight-bold);
@@ -52,9 +63,12 @@
 
 @media (min-width: $width-tablet) {
   .modal {
+    left: 50%;
+
     width: 568px;
     padding-left: 0;
     padding-right: 0;
+    margin-left: -(568px / 2);
   }
 
   .modal__title {
