--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -4,7 +4,7 @@
 }
 
 .order-form__fieldset {
-  margin: 0 0 10px;
+  margin: 0 0 11px;
   padding: 0;
 
   border: 0;
@@ -12,6 +12,10 @@
 
 .order-form__fieldset--singleton {
   margin-bottom: 32px;
+}
+
+.order-form__wrapper {
+  display: flex;
 }
 
 .order-form__title {
@@ -28,6 +32,16 @@
 
 .order-form__list {
   @include list-reset;
+
+  li {
+    min-height: 59px;
+  }
+}
+
+.order-form__list--columns {
+  li {
+    min-height: 61px;
+  }
 }
 
 .order-form__input-radio,
@@ -37,6 +51,8 @@
 
 .order-form__label-radio,
 .order-form__label-check {
+  position: relative;
+
   display: block;
 
   box-sizing: border-box;
@@ -44,16 +60,89 @@
 
   @include font-set($text-important, 18px, $weight-bold);
   color: $color-important;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    box-sizing: border-box;
+    width: 40px;
+    height: 40px;
+
+    border: 2px solid $color-secondary;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+
+    display: none;
+  }
+
+  &:hover::before,
+  &:focus::before {
+    border-color: $color-interactive-primary;
+  }
+
+  &:active::before {
+    border-color: rgba($color-secondary, 0.3);
+  }
+
+  &:active::after {
+    display: block;
+  }
 }
 
 .order-form__label-radio {
-  min-height: 60px;
   padding-top: 8px;
+  padding-bottom: 14px;
+
+  &::before {
+    border-radius: 50%;
+  }
+
+  &::after {
+    top: 12px;
+    left: 12px;
+
+    width: 16px;
+    height: 16px;
+
+    background-color: $color-interactive-primary;
+    border-radius: 50%;
+  }
+}
+
+.order-form__input-radio[checked] + .order-form__label-radio::after {
+  display: block;
 }
 
 .order-form__label-check {
-  min-height: 61px;
   padding-top: 10px;
+  padding-bottom: 14px;
+
+  &::before {
+    height: 39px;
+  }
+
+  &::after {
+    top: 12px;
+    left: 9px;
+
+    width: 22px;
+    height: 16px;
+
+    @include background-image("../img/icon-tick.svg", 0, 0);
+    background-size: 22px 16px;
+  }
+}
+
+.order-form__input-check[checked] + .order-form__label-check::after {
+  display: block;
 }
 
 .order-form__field {
@@ -122,7 +211,7 @@
 }
 
 .order-form__footer {
-  padding-top: 6px;
+  padding-top: 4px;
   margin-bottom: 55px;
 }
 
@@ -136,6 +225,35 @@
 .order-form__btn {
   width: 100%;
   padding: 0;
+}
+
+@media (max-width: $width-tablet - 1) {
+  .order-form__wrapper {
+    flex-wrap: wrap;
+    align-items: flex-start;
+
+    &::before {
+      content: "";
+
+      flex-grow: 1;
+
+      width: 150px;
+      height: 1px;
+      margin-top: 8px;
+      margin-left: 22px;
+
+      background-color: $color-interactive-primary;
+    }
+  }
+
+  .order-form__title {
+    order: -1;
+  }
+
+  .order-form__list,
+  .order-form__group {
+    width: 100%;
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -163,10 +281,6 @@
     padding-bottom: 24px;
   }
 
-  .order-form__wrapper {
-    display: flex;
-  }
-
   .order-form__title {
     width: 25%;
     margin-top: 17px;
@@ -185,7 +299,7 @@
   }
 
   .order-form__list--columns li {
-    width: 237px;
+    width: 48%;
   }
 
   .order-form__label-radio,
@@ -198,10 +312,38 @@
 
   .order-form__label-radio {
     padding-top: 17px;
+
+    &::before {
+      width: 52px;
+      height: 52px;
+    }
+
+    &::after {
+      top: 15px;
+      left: 15px;
+
+      width: 22px;
+      height: 22px;
+    }
   }
 
   .order-form__label-check {
     padding-top: 16px;
+
+    &::before {
+      width: 54px;
+      height: 52px;
+    }
+
+    &::after {
+      top: 16px;
+      left: 11px;
+
+      width: 33px;
+      height: 22px;
+
+      background-size: 33px 22px;
+    }
   }
 
   .order-form__field {
