--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -5,6 +5,8 @@
 }
 
 .slider__control {
+  position: relative;
+
   flex-grow: 1;
 
   height: 52px;
@@ -15,10 +17,40 @@
   border: 1px solid $color-border-primary;
   outline: none;
   cursor: pointer;
+
+  &::after {
+    content: "";
+
+    position: absolute;
+    top: 13px;
+    left: 0;
+
+    width: 100%;
+    height: 26px;
+  }
+
+  &:hover::after {
+    opacity: 0.6;
+  }
+
+  &:focus::after,
+  &:active::after {
+    opacity: 0.3;
+  }
 }
 
 .slider__control--previous {
   border-right: none;
+
+  &::after {
+    @include background-image("../img/icon-left-arrow.svg", center, 0);
+  }
+}
+
+.slider__control--next {
+  &::after {
+    @include background-image("../img/icon-right-arrow.svg", center, 0);
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -29,7 +61,6 @@
   }
 
   .slider__control {
-    background-color: #cccccc; //TMP
     border: none;
   }
 }
