--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "blocks/copyright";
 @import "blocks/btn";
 @import "blocks/slider";
+@import "blocks/overlay";
 @import "blocks/modal";
 @import "blocks/modal--to-cart";
 @import "blocks/to-cart-form";
